--- a/server/templates/admin/base.html
+++ b/server/templates/admin/base.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base.html' %}
+{% load i18n %}
 
 {% block extrahead %}{{ block.super }}
 <style>
@@ -9,4 +10,10 @@
   --link-selected-fg: #8f5bb2;
 }
 </style>
+{% endblock %}
+
+{% block userlinks %}{{ block.super }}
+    {% if user.is_superuser %} /
+        <a href="{% url 'admin:settings' %}">{% translate 'Settings' %}</a>
+    {% endif %}
 {% endblock %}
